Implements base modules
Adds helper modules
 - Encrypter
 - Helper functions
 - App Key Generation
 - Url Signer
 - Custom Validator
 - Node Mailer

Adds OpenAPI Swagger Documentation Config
Adds Database Configurations
Adds Admin Users Module
Adds Permissions Module
Adss Roles Module
Adds Media/File Upload module
Adds Admin Authentication

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "confyde-backend",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Confyde API Server",
+  "author": "Build for SDG Cohort 2 Team 369 Group A",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -21,12 +21,37 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs-modules/mailer": "^1.5.1",
+    "@nestjs/common": "^7.1.3",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.1.3",
+    "@nestjs/jwt": "^7.1.0",
+    "@nestjs/passport": "^7.1.0",
+    "@nestjs/platform-express": "^7.1.3",
+    "@nestjs/swagger": "^4.5.9",
+    "@nestjs/typeorm": "^7.1.0",
+    "@nestjsx/crud": "^4.6.2",
+    "@nestjsx/crud-typeorm": "^4.6.2",
+    "@types/geojson": "^7946.0.7",
+    "@types/multer": "^1.4.3",
+    "bcrypt": "^4.0.1",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.12.2",
+    "handlebars": "^4.7.6",
+    "limax": "^2.0.0",
+    "move-file": "^2.0.0",
+    "mysql": "^2.18.1",
+    "nestjs-typeorm-paginate": "^2.0.3",
+    "nodemailer": "^6.4.11",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "replace-in-file": "^6.1.0",
+    "rimraf": "^3.0.0",
+    "rxjs": "^6.5.5",
+    "swagger-ui-express": "^4.1.4",
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.0.0",
