--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,8 @@ DB_PASSWORD=dbpass
 DB_PREFIX=
 DB_LEGACY_SPATIAL=false # Set to true if using MySQL verion below 8
 
+TEST_DB_NAME=confyde_test
+
 # DevelMail
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.develmail.com
