Disables e2e test on Gitub Actions
### Description

e2e Test, Start and Start Production jobs are removed because database connection settings are not available on the repository as per best practises to exclude .env files from repository.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -47,9 +47,11 @@ jobs:
       run: npm run test
     - name: Run Coverage Test
       run: npm run test:cov
-    - name: Run Test e2e
-      run: npm run test:e2e
-    - name: Start 
-      run: npm run start
-    - name: Start Production
-      run: npm start:prod 
+    # - name: Run Test Debug
+    #   run: npm run test:debug
+    # - name: Run Test e2e
+    #   run: npm run test:e2e
+    # - name: Start 
+    #   run: npm run start
+    # - name: Start Production
+    #   run: npm start:prod 
